--- a/src/ba/unsa/etf/rs/tut4/sample.fxml
+++ b/src/ba/unsa/etf/rs/tut4/sample.fxml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<TabPane fx:controller="ba.unsa.etf.rs.tut4.Controller" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rs.tut4.Controller">
   <tabs>
     <Tab text="Artikli">
          <content>
@@ -22,7 +31,7 @@
                <children>
                   <TextArea fx:id="sourceField" prefHeight="200.0" prefWidth="200.0" />
                   <TextArea fx:id="destinationField" editable="false" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" onAction="#addToReceipt" text="Button" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowSpan="2">
+                  <Button mnemonicParsing="false" onAction="#addToReceipt" text="Dodaj" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowSpan="2">
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
@@ -33,7 +42,28 @@
     </Tab>
     <Tab text="Račun">
       <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
+                <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
+                  <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
+                <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Artikal" />
+                  <Label text="Količina" GridPane.rowIndex="1" />
+                  <Label text="Iznos" GridPane.rowIndex="3" />
+                  <ChoiceBox fx:id="artikalChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" />
+                  <Button mnemonicParsing="false" onAction="#dodajNaRacun" text="Dodaj" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextArea fx:id="iznosArea" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Spinner fx:id="kolicinaSpinner" GridPane.columnIndex="1" GridPane.rowIndex="1"
+                            min="1" max="100"  />
+               </children>
+            </GridPane>
       </content>
     </Tab>
   </tabs>
